<resources>
    <string name="app_name">LuBoard</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="yellow">Yellow</string>
    <string name="violet">Violet</string>

    <string name="this_is_board">This is board #</string>
    <string name="go_back">Go Back</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_create_account">Create Account</string>
    <string name="field_username">Username</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_created_at">Created at</string>
    <string name="field_repeat_password">Repeat Password</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="placeholder">-</string>

    <string name="no_boxes">There aren\'t boxes you are looking for</string>
    <string name="please_wait">Please wait…</string>
    <string name="profile_title_hint">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="screen_list_boards">Boards List</string>
    <string name="screen_board">Board</string>
    <string name="screen_sign_in">Sign In</string>
    <string name="screen_sign_up">Create Account</string>
    <string name="screen_profile">Profile</string>
    <string name="screen_settings">Settings</string>
    <string name="screen_edit_profile">Edit Profile</string>
    <string name="posts">Posts</string>
    <string name="open_board">Open board</string>
    <string name="name_of_board">Name of board</string>
    <string name="create">Create</string>
    <string name="add_board_cont_description">add board</string>
    <string name="add_board_description">add board</string>
    <string name="description_of_board">Description of board</string>
    <string name="name_of_post">Name of post</string>
    <string name="description_of_post">Description of post</string>
    <string name="edit">Edit</string>
    <string name="email_hint">Email</string>
    <string name="board_name_title">Board Name</string>
    <string name="create_btn">Create</string>
    <string name="enter_board_name_title">Enter Board Name...</string>
    <string name="post_title">Post title</string>
    <string name="input_text_title">INPUT TEXT</string>
    <string name="more_features">More features</string>
    <string name="pick_color">Pick color</string>
    <string name="posts_of_board">Posts of board</string>
    <string name="boards">Boards</string>
    <string name="all_posts">All Posts</string>
    <string name="profile_title">Profile</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="logout_btn">Logout</string>
    <string name="login_title">Login</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter Your Email...</string>
    <string name="enter_your_password">Enter Your Password...</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_your_password_again">Enter Your Password Again...</string>
</resources>