<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.main.auth.signup.SignUpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcons" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="260dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                app:srcCompat="@drawable/sign_up_image" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/sign_up_btn"
            android:textAlignment="center"
            android:textColor="#5193F4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="Email"
            android:textColor="#5193F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edt"
            android:ems="10"
            android:hint="Enter Your Email..."
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColorHint="#404040"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="#5193F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edt"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColorHint="#404040"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/repeat_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/repeat_password"
            android:textColor="#5193F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/repeat_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edt"
            android:ems="10"
            android:hint="@string/enter_your_password_again"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColorHint="#404040"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_account_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/second_blue_background"

            >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_btn"
                android:textColor="#3D3D40"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>