<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.main.auth.signin.SignInFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:srcCompat="@drawable/sign_in_image" />

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="#5193F4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="Email"
            android:textColor="#5193F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edt"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColorHint="#404040"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="#5193F4"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edt"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColorHint="#404040"
            android:textSize="17sp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signInButton"
            android:layout_width="300dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/blue_background"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUpButton"
            android:layout_width="300dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/second_blue_background"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_btn"
                android:textColor="#3D3D40"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>