<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boxesContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.tabs.maintab.board.BoardFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView

        android:id="@+id/imageBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        android:layout_marginTop="40dp"

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorIcons" />

    <TextView
        android:id="@+id/all_post_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.87"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/posts_of_board"
        android:textColor="#272727"
        android:textSize="35sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/right_guide_line"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/left_guide_line"
        app:layout_constraintTop_toBottomOf="@+id/imageBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:clipToPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_post_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="78dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/add_board_description"

        app:borderWidth="0dp"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>